--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
   春風や<br>
   闘志いだきて<br>
   丘に立つ
+  <ul>
+  <li>
+    PC
+    <ul>
+      <li>Windows</li>
+      <li>Mac</li>
+      <li>Linux</li>
+    </ul>
+  </li>
+  <li>
+    スマホ
+    <ul>
+      <li>iOS</li>
+      <li>Android</li>
+    </ul>
+  </li>
+</ul>
 </body>
 </html>
