--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>高浜虚子の俳句</title>
+  <title>〇〇の自己紹介</title>
 </head>
 <body>
-  春風や<br>
-  闘志いだきて<br>
-  丘に立つ
+  <img src="https://progedu.github.io/forum-ranking/assets/images/logo-n.svg" alt="アイコン">
+  <h1>〇〇（あなたのハンドルネーム）</h1>
+
+  <h3>わたしの情報</h3>
   <ul>
-  <li>
-    PC
-    <ul>
-      <li>Windows</li>
-      <li>Mac</li>
-      <li>Linux</li>
-    </ul>
-  </li>
-  <li>
-    スマホ
-    <ul>
-      <li>iOS</li>
-      <li>Android</li>
-    </ul>
-  </li>
-</ul>
+    <li>出身地：〇〇</li>
+    <li>星座：△△</li>
+    <li>座右の銘：～～～～～</li>
+  </ul>
+
+  <h3>趣味</h3>
+  <ul>
+    <li>〇〇〇〇〇</li>
+    <li>△△△△△</li>
+    <li>～～～～～</li>
+  </ul>
+
+  <h3>お気に入りサイトのリンク集</h3>
+  <ul>
+    <li><a href="https://x.com/n_yobikou">N予備校の X(旧 Twitter)</a></li>
+  </ul>
+
+  <h3>好きな動画</h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/WkqPh70G3gY?si=IoX0Ov5fbqO4Wqxn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
