--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>〇〇の自己紹介</title>
+  <title>Youki5000の自己紹介</title>
 </head>
 <body>
   <img src="https://progedu.github.io/forum-ranking/assets/images/logo-n.svg" alt="アイコン">
-  <h1>〇〇（あなたのハンドルネーム）</h1>
+  <h1>Higuchi　Yuki（Youki5000）</h1>
 
   <h3>わたしの情報</h3>
   <ul>
-    <li>出身地：〇〇</li>
-    <li>星座：△△</li>
+    <li>出身地：佐賀県</li>
+    <li>星座：おうし座</li>
     <li>座右の銘：～～～～～</li>
   </ul>
 
   <h3>趣味</h3>
   <ul>
-    <li>〇〇〇〇〇</li>
-    <li>△△△△△</li>
-    <li>～～～～～</li>
+    <li>旅行兼写真撮影</li>
+    <li>エレキギター</li>
+    <li>カフェ巡り</li>
   </ul>
 
   <h3>お気に入りサイトのリンク集</h3>
