--- a/index.html
+++ b/index.html
@@ -30,5 +30,13 @@
 
   <h3>好きな動画</h3>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/WkqPh70G3gY?si=IoX0Ov5fbqO4Wqxn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  <h3>このサイトについて</h3>
+  <p>
+    このサイトはN予備校のWeb アプリケーション開発コースで作成した<span>自己紹介ページ</span>です。<br>
+    <span>自己紹介ページ</span>ではこれまでに学んだ HTML のタグを使い分けながら作りました。<br>
+    新しく学んだ CSS の知識を使って<span>自己紹介ページ</span>のデザインもしました。
+  </p>
+
 </body>
 </html>
