--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <h3>作品一覧</h3>
   <ul>
-    <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">N予備校の X(旧 Twitter)</a></li>
+    <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
   </ul>  
 
 </body>
