--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <h3>作品一覧</h3>
   <ul>
     <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
+    <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
   </ul>  
 
 </body>
