--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -11,5 +11,6 @@
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
     <script src="assessment.js"></script>
+    <a href="https://youki5000.github.io/intro25/index.html">TOPに戻る</a>
   </body>
 </html>
