--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -2,8 +2,18 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <meta name="twitter:card" content="summary">
+    <meta
+      property="og:url"
+      content="https://あなたのユーザ名.github.io/assessment/assessment.html"
+    >
+    <meta property="og:title" content="あなたのいいところ診断">
+    <meta
+      property="og:description"
+      content="N予備校 Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。"
+    >
     <link rel="stylesheet" href="assessment.css">
-    <title>あなたのいいところ診断</title>
+    <title>あなたのユーザ名が作ったあなたのいいところ診断</title>
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
