--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -48,5 +48,7 @@
     
     <br>
     <a href="https://youki5000.github.io/intro25/index.html">TOPに戻る</a>
+
+    <script src="assessment.js"></script>
   </body>
 </html>
