--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -43,11 +43,11 @@
         </div>
       </div>
       <div id="tweet-area" class="mt-3"></div>
+      <div class="text-center mt-3">
+        <a href="https://youki5000.github.io/intro25/index.html" class="btn btn-secondary">TOPに戻る</a>
+      </div>
     </div>
     
-    <br>
-    <a href="https://youki5000.github.io/intro25/index.html">TOPに戻る</a>
-
     <script src="assessment.js"></script>
   </body>
 </html>
