--- a/index.html
+++ b/index.html
@@ -7,43 +7,44 @@
   <link rel="stylesheet" href="self-introduction.css">
 </head>
 <body>
-  <img src="https://progedu.github.io/forum-ranking/assets/images/logo-n.svg" alt="アイコン">
-  <h1>Higuchi　Yuki（Youki5000）</h1>
+  <div class="container">
+    <img src="https://progedu.github.io/forum-ranking/assets/images/logo-n.svg" alt="アイコン" class="icon">
+    <h1>Higuchi　Yuki（Youki5000）</h1>
 
-  <h3>わたしの情報</h3>
-  <ul>
-    <li>出身地：佐賀県</li>
-    <li>星座：おうし座</li>
-    <li>座右の銘：雨垂れ石を穿つ</li>
-  </ul>
+    <h3>わたしの情報</h3>
+    <ul>
+      <li>出身地：佐賀県</li>
+      <li>星座：おうし座</li>
+      <li>座右の銘：雨垂れ石を穿つ</li>
+    </ul>
 
-  <h3>趣味</h3>
-  <ul>
-    <li>旅行兼写真撮影</li>
-    <li>エレキギター</li>
-    <li>カフェ巡り</li>
-  </ul>
+    <h3>趣味</h3>
+    <ul>
+      <li>旅行兼写真撮影</li>
+      <li>エレキギター</li>
+      <li>カフェ巡り</li>
+    </ul>
 
-  <h3>お気に入りサイトのリンク集</h3>
-  <ul>
-    <li><a href="https://x.com/n_yobikou">N予備校の X(旧 Twitter)</a></li>
-  </ul>
+    <h3>お気に入りサイトのリンク集</h3>
+    <ul>
+      <li><a href="https://x.com/n_yobikou">N予備校の X(旧 Twitter)</a></li>
+    </ul>
 
-  <h3>好きな動画</h3>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/WkqPh70G3gY?si=IoX0Ov5fbqO4Wqxn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h3>好きな動画</h3>
+    <iframe class="video" src="https://www.youtube.com/embed/WkqPh70G3gY?si=IoX0Ov5fbqO4Wqxn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-  <h3>このサイトについて</h3>
-  <p>
-    このサイトはN予備校のWeb アプリケーション開発コースで作成した<span>自己紹介ページ</span>です。<br>
-    <span>自己紹介ページ</span>ではこれまでに学んだ HTML のタグを使い分けながら作りました。<br>
-    新しく学んだ CSS の知識を使って<span>自己紹介ページ</span>のデザインもしました。
-  </p>
+    <h3>このサイトについて</h3>
+    <p>
+      このサイトはN予備校のWeb アプリケーション開発コースで作成した<span>自己紹介ページ</span>です。<br>
+      <span>自己紹介ページ</span>ではこれまでに学んだ HTML のタグを使い分けながら作りました。<br>
+      新しく学んだ CSS の知識を使って<span>自己紹介ページ</span>のデザインもしました。
+    </p>
 
-  <h3>作品一覧</h3>
-  <ul>
-    <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
-    <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
-  </ul>  
-
+    <h3>作品一覧</h3>
+    <ul>
+      <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
+      <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
+    </ul>
+  </div>
 </body>
 </html>
