--- a/index.html
+++ b/index.html
@@ -52,19 +52,9 @@
 
     <div class="section">
       <h3>作品一覧</h3>
-      <ul class="project-list">
-        <li>
-          <a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">
-            <img src="file-db04SFvbui4usDhwaPqw1dZH" alt="CSS Programming Icon" class="project-icon">
-            CSSを用いたプログラミング
-          </a>
-        </li>
-        <li>
-          <a href="https://youki5000.github.io/intro25/assessment/assessment.html">
-            <img src="file-slX2I4vDsQmLkRb9ASaRFmtA" alt="Assessment Icon" class="project-icon">
-            あなたのいいところは？
-          </a>
-        </li>
+      <ul>
+        <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
+        <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
       </ul>
     </div>
   </div>
