--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <ul>
         <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
         <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
+        <li><a href="https://youki5000.github.io/intro25/portfolio/portfolio.html">ポートフォリオページ</a></li>
       </ul>
     </div>
   </div>
