--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -7,7 +7,7 @@
     <title>ハンドルネームのポートフォリオ</title>
   </head>
   <body>
-    <a href="https://youki5000.github.io/intro25/index.html" class="btn btn-secondary">TOPに戻る</a>
+    <a href="https://youki5000.github.io/intro25/portfolio/portfolio.html" class="btn btn-secondary">TOPに戻る</a>
     <h1>ハンドルネーム</h1>
 
     <h2>About</h2>
