--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -71,11 +71,17 @@
     <table>
       <tr>
         <th>2019 年</th>
-        <td><a href="https://dwango.co.jp/">株式会社ドワンゴ</a> 入社</td>
+        <td><a href="https://dwango.co.jp/">東京農工大学　工学部　知能情報システム工学科</a> 入学</td>
       </tr>
       <tr>
-        <th>2018 年</th>
-        <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">N高等学校</a> 卒業</td>
+        <th>2020 年</th>
+        <td><a href="https://dwango.co.jp/">学校法人角川ドワンゴ学園 N高等学校</a>立川校 プログラミングTA</td>
+      </tr>
+      <tr>
+        <th>2023 年</th>
+        <td><a href="https://dwango.co.jp/">東京農工大学　工学部　知能情報システム工学科</a> 卒業</td>
+        <td><a href="https://dwango.co.jp/">東京農工大学大学院 工学府 知能情報システム工学専攻</a> 入学</td>
+        <td>株式会社ヒューメイア <a href="https://nnn.ed.jp/">ビール販売</a>フロントエンド・バックエンドエンジニア </td>
       </tr>
       <tr>
         <th>20XX 年</th>
