--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -47,8 +47,6 @@
     <p>アピールできる活動内容を書きましょう。</p>
     <ul>
       <li><a href="https://github.com/">GitHub</a></li>
-      <li><a href="https://qiita.com/">Qiita</a></li>
-      <li><a href="https://zenn.dev/">Zenn</a></li>
       <li>
         作った作品
         <ul>
@@ -61,11 +59,8 @@
     <h3>Contact</h3>
     <p>連絡先や SNS のアカウントを書きましょう。</p>
     <ul>
-      <li><a href="mailto:name@example.com">Mail</a></li>
-      <li><a href="https://x.com/n_yobikou">X(旧 Twitter)</a></li>
-      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+      <li><a href="ui428180w@gmail.com">Mail</a></li>
     </ul>
-
     <h3>History</h3>
     <p>学歴、職歴、アルバイト、インターン経験など。</p>
     <table>
