--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -66,7 +66,7 @@
     <table>
       <tr>
         <th>2019 年</th>
-        <td><a href="https://dwango.co.jp/">東京農工大学　工学部　知能情報システム工学科</a> 入学</td>
+        <td><a href="https://www.eecs.tuat.ac.jp/">東京農工大学　工学部　知能情報システム工学科</a> 入学</td>
       </tr>
       <tr>
         <th>2020 年</th>
@@ -74,15 +74,15 @@
       </tr>
       <tr>
         <th>2023 年</th>
-        <td><a href="https://dwango.co.jp/">東京農工大学　工学部　知能情報システム工学科</a> 卒業</td>
+        <td><a href="https://www.eecs.tuat.ac.jp/">東京農工大学　工学部　知能情報システム工学科</a> 卒業</td>
       </tr>
       <tr>
         <th></th>
-        <td><a href="https://dwango.co.jp/">東京農工大学大学院 工学府 知能情報システム工学専攻</a> 入学</td>
+        <td><a href="https://www.eecs.tuat.ac.jp/">東京農工大学大学院 工学府 知能情報システム工学専攻</a> 入学</td>
       </tr>
       <tr>
         <th></th>
-        <td>株式会社ヒューメイア <a href="https://nnn.ed.jp/">ビール販売</a>フロントエンド・バックエンドエンジニア </td>
+        <td>株式会社ヒューメイア <a href="https://www.humeia.co.jp/newsRelease/060515.html">ビール販売</a>フロントエンド・バックエンドエンジニア </td>
       </tr>
       <tr>
         <th>20XX 年</th>
