--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <th>2020 年</th>
-        <td><a href="https://dwango.co.jp/">学校法人角川ドワンゴ学園 N高等学校</a>立川校 プログラミングTA</td>
+        <td><a href="https://nnn.ed.jp/campus/tachikawa/">学校法人角川ドワンゴ学園 N高等学校</a>立川校 プログラミングTA</td>
       </tr>
       <tr>
         <th>2023 年</th>
@@ -82,7 +82,7 @@
       </tr>
       <tr>
         <th></th>
-        <td>株式会社ヒューメイア <a href="https://www.humeia.co.jp/newsRelease/060515.html">ビール販売</a>フロントエンド・バックエンドエンジニア </td>
+        <td>株式会社ヒューメイア <a href="https://www.humeia.co.jp/newsRelease/060515.html">ビール販売</a> フロントエンド・バックエンドエンジニア </td>
       </tr>
       <tr>
         <th>20XX 年</th>
