--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="portfolio.css" rel="stylesheet">
-    <title>ハンドルネームのポートフォリオ</title>
+    <title>Youki5000のポートフォリオ</title>
   </head>
   <body>
     <a href="https://youki5000.github.io/intro25/portfolio/portfolio.html" class="btn btn-secondary">TOPに戻る</a>
-    <h1>ハンドルネーム</h1>
+    <h1>Youki5000</h1>
 
     <h2>About</h2>
     <p>
