--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <img src="https://progedu.github.io/forum-ranking/assets/images/logo-n.svg" alt="アイコン" class="icon">
-    <h1>Higuchi　Yuki（Youki5000）</h1>
+    <h1>H.Yuki（Youki5000）</h1>
 
     <div class="section">
       <h3>わたしの情報</h3>
