--- a/css-programming/ts-ver/index.html
+++ b/css-programming/ts-ver/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1 id="heading">CSS を使ったプログラミング</h1>
-  <script src="animation.js"></script>
+  <script src="index.js"></script>
   <a href="https://youki5000.github.io/intro25/index.html">TOPに戻る</a>
 </body>
 </html>
