--- a/css-programming/ts-ver/index.html
+++ b/css-programming/ts-ver/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS を使ったプログラミング</title>
-  <link rel="stylesheet" href="css-programming.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1 id="heading">CSS を使ったプログラミング</h1>
