--- a/css-programming/ts-ver/index.html
+++ b/css-programming/ts-ver/index.html
@@ -9,5 +9,6 @@
   <h1 id="heading">CSS を使ったプログラミング</h1>
   <script src="index.js"></script>
   <a href="https://youki5000.github.io/intro25/index.html">TOPに戻る</a>
+  <a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a>
 </body>
 </html>
