--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -42,8 +42,8 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://example.com/">作品 1</a></li>
-          <li><a href="https://example.com/">作品 2</a></li>
+          <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
+          <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
         </ul>
       </li>
     </ul>
