--- a/css-programming/css-programming.html
+++ b/css-programming/css-programming.html
@@ -8,7 +8,7 @@
   <body>
     <h1 id="heading">CSS を使ったプログラミング</h1>
     <script src="animation.js"></script>
-    <a href="https://youki5000.github.io/intro25/index.html">TOPに戻る</a>
+    <a href="https://youki5000.github.io/intro25/portfolio.html" class="btn btn-secondary">TOPに戻る</a>
     <a href="https://youki5000.github.io/intro25/css-programming/ts-ver/index.html">タイプスクリプトの場合</a>
   </body>
 </html>
