--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -44,7 +44,7 @@
       </div>
       <div id="tweet-area" class="mt-3"></div>
       <div class="text-center mt-3">
-        <a href="https://youki5000.github.io/intro25/index.html" class="btn btn-secondary">TOPに戻る</a>
+        <a href="https://youki5000.github.io/intro25/portfolio.html" class="btn btn-secondary">TOPに戻る</a>
       </div>
     </div>
     
