--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
     <h3>Works</h3>
     <ul>
-      <li><a href="https://github.com/">GitHub</a></li>
+      <li><a href="https://github.com/Youki5000">GitHub</a></li>
       <li>
         作った作品
         <ul>
