--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,28 @@
     <h3>Skills</h3>
     <table>
       <tr>
-        <th>OS</th>
-        <td>Windows, Ubuntu など</td>
+        <th>デザイン・コーディング</th>
+        <td>HTML5,CSS3</td>
       </tr>
       <tr>
-        <th>Engine, Frameworks</th>
-        <td>Node.js, Express など</td>
+        <th>フロントエンド</th>
+        <td>Java,JavaScript,TypeScript</td>
       </tr>
       <tr>
-        <th>Tool, MiddleWare</th>
-        <td>Git, PostgreSQL など</td>
+        <th>バックエンド</th>
+        <td>Python3,C</td>
+      </tr>
+      <tr>
+        <th>DB</th>
+        <td>SQLAlchemy</td>
+      </tr>
+      <tr>
+        <th>インフラ・サーバー</th>
+        <td>Apache,aws(EC2)</td>
+      </tr>
+      <tr>
+        <th>その他</th>
+        <td>MATLAB,Slack</td>
       </tr>
     </table>
 
