--- a/portfolio.html
+++ b/portfolio.html
@@ -7,19 +7,43 @@
     <title>Youki5000のポートフォリオ</title>
   </head>
   <body>
-    <h1>Youki5000's portfolio</h1>
+    <header id="header" class="flex">
+      <h1 class="logo">
+        <span class="logo-title">Youki5000's portfolio</span>
+        <span class="logo-desc">Web Engineer</span>
+      </h1>
+      <nav id="gnav" class="flex">
+        <ul class="flex">
+          <li>
+            <i class="fas fa-user fa-lg"></i>
+            <a href="#profile">PROFILE</a>
+          </li>
+          <li>
+            <i class="fas fa-lightbulb fa-lg"></i>
+            <a href="#skill">SKILL</a>
+          </li>
+          <li>
+            <i class="fas fa-tasks fa-lg"></i>
+            <a href="#works">WORKS</a>
+          </li>
+          <li>
+            <i class="fas fa-envelope fa-lg"></i>
+            <a href="#contact">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <h2>About</h2>
 
-
-    <h3>Profile</h3>
+    <h3 id="profile">Profile</h3>
     <ul>
       <li>Youki5000</li>
       <li>東京都</li>
       <li>フロントエンド、時間周波数解析</li>
     </ul>
 
-    <h3>Skills</h3>
+    <h3 id="skill">Skills</h3>
     <table>
       <tr>
         <th>デザイン・コーディング</th>
@@ -47,7 +71,7 @@
       </tr>
     </table>
 
-    <h3>Works</h3>
+    <h3 id="works">Works</h3>
     <ul>
       <li><a href="https://github.com/Youki5000">GitHub</a></li>
       <li>
@@ -60,11 +84,11 @@
       </li>
     </ul>
 
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <ul>
       <li><a href="ui428180w@gmail.com">Mail</a></li>
     </ul>
-    <h3>History</h3>
+    <h3 id="history">History</h3>
     <table>
       <tr>
         <th>2019 年</th>
