--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,13 @@
     <title>Youki5000のポートフォリオ</title>
   </head>
   <body>
-    <header id="header" class="flex">
+    <header id="header">
       <h1 class="logo">
         <span class="logo-title">Youki5000's portfolio</span>
         <span class="logo-desc">Web Engineer</span>
       </h1>
-      <nav id="gnav" class="flex">
-        <ul class="flex">
+      <nav id="gnav">
+        <ul>
           <li>
             <i class="fas fa-user fa-lg"></i>
             <a href="#profile">PROFILE</a>
