--- a/portfolio.html
+++ b/portfolio.html
@@ -55,11 +55,11 @@
       </tr>
       <tr>
         <th>バックエンド</th>
-        <td>Python3,C</td>
+        <td>Python3,C,PHP</td>
       </tr>
       <tr>
         <th>DB</th>
-        <td>SQLAlchemy</td>
+        <td>SQlite,SQLAlchemy</td>
       </tr>
       <tr>
         <th>インフラ・サーバー</th>
@@ -67,7 +67,7 @@
       </tr>
       <tr>
         <th>その他</th>
-        <td>MATLAB,Slack</td>
+        <td>MATLAB,R,Flask</td>
       </tr>
     </table>
 
