--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <header id="header">
       <h1 class="logo">
         <span class="logo-title">Youki5000's portfolio</span>
-        <span class="logo-desc">Web Engineer</span>
+        <span class="logo-desc"></span>
       </h1>
       <nav id="gnav">
         <ul>
