--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
       </tr>
       <tr>
         <th>2020 年</th>
-        <td><a href="https://nnn.ed.jp/campus/tachikawa/">学校法人角川ドワンゴ学園　N高等学校</a>立川校　プログラミングTA</td>
+        <td><a href="https://nnn.ed.jp/campus/tachikawa/">学校法人角川ドワンゴ学園　N高等学校　立川校</a>　プログラミングTA</td>
       </tr>
       <tr>
         <th>2023 年</th>
