--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <h2>About</h2>
 
     <h3 id="profile">Profile</h3>
-    <ul>
+    <ul class="profile-list">
       <li>Youki5000</li>
       <li>東京都</li>
       <li>フロントエンド、時間周波数解析</li>
@@ -72,7 +72,7 @@
     </table>
 
     <h3 id="works">Works</h3>
-    <ul>
+    <ul class="works-list">
       <li><a href="https://github.com/Youki5000">GitHub</a></li>
       <li>
         作った作品
