--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,6 @@
       </li>
     </ul>
 
-
     <h3 id="contact">Contact</h3>
     <ul>
       <li><a href="ui428180w@gmail.com">Mail</a></li>
@@ -109,7 +108,7 @@
       </tr>
       <tr>
         <th></th>
-        <td><a href="https://www.humeia.co.jp/newsRelease/060515.html">株式会社ヒューメイア　ビール販売部署</a>　フロントエンド・バックエンドエンジニア </td>
+        <td><a href="https://www.humeia.co.jp/newsRelease/060515.html">株式会社ヒューメイア　ビール販売</a>　フロントエンド・バックエンドエンジニア </td>
       </tr>
     </table>
   </body>
