--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,7 @@
     <h3 id="contact">Contact</h3>
     <ul>
       <li><a href="ui428180w@gmail.com">Mail</a></li>
+      <li><a href="https://github.com/Youki5000">GitHub</a></li>
     </ul>
     <h3 id="history">History</h3>
     <table>
