--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,8 @@
     <h3 id="works">Works</h3>
     <ul class="works-list">
       <li><a href="https://github.com/Youki5000">GitHub</a></li>
+      <a>作った作品</a><br>
       <li>
-        作った作品
         <ul>
           <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
           <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
