--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,9 @@
 
     <h3 id="profile">Profile</h3>
     <ul class="profile-list">
-      <li>Youki5000</li><br>
-      <li>東京都</li><br>
-      <li>フロントエンド、時間周波数解析</li><br>
+      <li>Youki5000</li>
+      <li>東京都</li>
+      <li>フロントエンド、時間周波数解析</li>
     </ul>
 
     <h3 id="skill">Skills</h3>
