--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
 
     <h3 id="works">Works</h3>
     <ul class="works-list">
-      <a>作った作品</a><br>
+      <p>作った作品</p>
         <ul>
           <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
           <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
