--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -2,22 +2,22 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:url" content="https://youki5000.github.io/intro25/assessment/assessment.html">
-    <meta property="og:title" content="あなたのいいところ診断">
-    <meta property="og:description" content="N予備校 Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
-    <meta property="og:image" content="https://youki5000.github.io/intro25/assessment/og-image.jpg">
     <meta name="twitter:site" content="@Twitterユーザ名">
     <meta name="twitter:title" content="あなたのいいところ診断">
     <meta name="twitter:description" content="N予備校 Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
     <meta name="twitter:image" content="https://youki5000.github.io/intro25/assessment/og-image.jpg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://youki5000.github.io/intro25/assessment/assessment.html">
+    <meta property="og:title" content="あなたのいいところ診断">
+    <meta property="og:description" content="N予備校 Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
+    <meta property="og:image" content="https://youki5000.github.io/intro25/assessment/og-image.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
     <title>あなたのいいところ診断</title>
   </head>
   <body class="bg-primary-subtle">
     <header>
-      <nav class="navbar bg-primary" data-bs-theme="dark">
+      <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">あなたのいいところ診断</a>
         </div>
@@ -25,13 +25,14 @@
     </header>
     
     <div class="container pt-5">
-      <h1>あなたのいいところは?</h1>
+      <h1>今日の運勢は？</h1>
       <p>診断したい名前を入れて下さい</p>
 
       <div class="row">
         <div class="col-sm-9 col-lg-6">
           <div class="input-group mb-3">
-            <input type="text" class="form-control " id="user-name" size="40" maxlength="20">
+            <label for="user-name" class="visually-hidden">名前</label>
+            <input type="text" class="form-control" id="user-name" size="40" maxlength="20" aria-label="診断したい名前">
             <button class="btn btn-primary" id="assessment">診断する</button>
           </div>
         </div>
