--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -13,13 +13,13 @@
     <meta property="og:description" content="N予備校 Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
     <meta property="og:image" content="https://youki5000.github.io/intro25/assessment/og-image.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
-    <title>あなたのいいところ診断</title>
+    <title>今日の運勢は？</title>
   </head>
   <body class="bg-primary-subtle">
     <header>
       <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+          <a class="navbar-brand" href="#">今日の運勢は？</a>
         </div>
       </nav>
     </header>
