--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
     <ul class="works-list">
       <li>作った作品</li>
         <ul>
-          <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">あなたのいいところは？</a></li>
+          <li><a href="https://youki5000.github.io/intro25/assessment/assessment.html">今日の運勢は？</a></li>
           <li><a href="https://youki5000.github.io/intro25/css-programming/css-programming.html">CSSを用いたプログラミング</a></li>
           <li><a href="">RestAPIに準拠した在庫管理システム</a></li>
         </ul>
