--- a/assessment/assessment.html
+++ b/assessment/assessment.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>今日の運勢は？</title>
   </head>
   <body class="bg-primary-subtle">
