--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
       </tr>
       <tr>
         <th>バックエンド</th>
-        <td>Python3,C,PHP</td>
+        <td>Python3,C,C++,PHP</td>
       </tr>
       <tr>
         <th>DB</th>
